plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsExplicit/left/left.kt
expect class <!LINE_MARKER("descr='Has actuals in bottom module'")!>A<!>
